# llm_finetuning

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  README_PRODUCTION.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
01_quantization/: quantization_benchmark.ipynb
02_gguf_inference/: app.py  gguf_inference.ipynb
03_qlora_finetune/: qlora_finetune.ipynb
04_context_memory/: context_memory_chatbot.ipynb
05_hybrid_rag/: hybrid_rag_demo.ipynb
06_evaluation/: evaluation_and_redteam.ipynb
backend/: __init__.py  auth.py  chat_service.py  chat_session.py  config.py  main.py  streaming_service.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.css  App.jsx  AuthInterface.css  AuthInterface.jsx  ChatInterface.css  ChatInterface.jsx  Dashboard.jsx  index.css
llm_lab/: __init__.py  benchmarks.py  demo_data.py  evaluation.py  gguf_api.py  memory.py  models.py  retrieval.py  utils.py
llm_optimization_lab.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_api.py  test_integration.py
